--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 project(GBFS VERSION 2006.08.15 LANGUAGES C)
 
-execute_process(COMMAND echo ${CMAKE_SOURCE_DIR})
-execute_process(COMMAND python3 ${BUILDSYSTEM_ROOT}/findSources.py -l sources -e .c source include -o ${CMAKE_BINARY_DIR}/sources.cmake WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
-
 set(CPACK_PACKAGE_NAME libgbfs)
-set(CPACK_PACKAGE_VENDOR Demoura)
-set(CPACK_PACKAGE_CONTACT gdeperes@gmail.com)
+set(CPACK_PACKAGE_VENDOR placeholder)
+set(CPACK_PACKAGE_CONTACT placeholder)
 
-include(${BUILDSYSTEM_ROOT}/GBA.cmake)
-include(${CMAKE_BINARY_DIR}/sources.cmake)
 include(CPack)
+include(GNUInstallDirs)
 
-add_library(libgbfs ${sources})
-set_target_properties(libgbfs PROPERTIES PREFIX "")
+add_library(libgbfs source/libgbfs.c)
+set_target_properties(libgbfs PROPERTIES PREFIX "") #So we don't end up with liblibgbfs
 target_include_directories(libgbfs
     PUBLIC
         $<INSTALL_INTERFACE:include>
@@ -22,12 +18,12 @@ target_include_directories(libgbfs
         ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-include(GNUInstallDirs)
+#For instalation of static library files.
 install(TARGETS libgbfs
     EXPORT libgbfs-config
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
+#For instalation of include files.
 install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
+#For installation of CMake config files. For find_package().
 install(EXPORT libgbfs-config DESTINATION ${CMAKE_INSTALL_DATADIR}/libgbfs)
